--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <!-- Referral Section -->
     <div id="referral-section" style="display: none;">
       <div class="info">
-        <p><strong>Your Code:</strong> <span id="ref-code">SANDIP123</span></p>
+        <p><strong>Your Code:</strong> <span id="ref-code">https://sandip200k.github.io/Lucky-Draw-win-phone-/</span></p>
         <p><strong>Free Tickets:</strong> <span id="free-tickets">0</span></p>
       </div>
       <button class="btn share-btn" onclick="shareCode()">📤 Share Invite Link</button>
