--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
       margin: 0;
       padding: 0;
     }
-
     .marquee-top {
       position: fixed;
-      top: 0;
       left: 0;
       width: 100%;
-      background: linear-gradient(90deg, #FFD700, #FFEB3B);
-      color: #000;
-      padding: 12px;
+      padding: 8px 0;
       font-weight: bold;
       font-size: 16px;
       text-align: center;
       z-index: 1000;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-
-    .marquee-top marquee {
-      display: inline-block;
-      width: 100%;
+    .marquee-top:first-child {
+      top: 0;
+      background: linear-gradient(90deg, #FFD700, #FFEB3B);
+      color: #000;
     }
-
+    .marquee-top:nth-child(2) {
+      top: 40px;
+      background: #4CAF50;
+      color: white;
+    }
     .container {
       background: #fff;
       padding: 30px;
@@ -42,7 +42,6 @@
       max-width: 400px;
       margin: 100px auto 40px auto;
     }
-
     input {
       width: 100%;
       padding: 12px;
@@ -50,7 +49,6 @@
       border: 1px solid #ccc;
       border-radius: 8px;
     }
-
     button, .btn {
       width: 100%;
       padding: 12px;
@@ -60,10 +58,8 @@
       border-radius: 8px;
       cursor: pointer;
     }
-
     .buy-btn { background-color: #4CAF50; color: white; }
     .share-btn { background-color: #2196F3; color: white; }
-
     .info {
       background: #eef;
       padding: 10px;
@@ -71,48 +67,38 @@
       margin: 15px 0;
       text-align: left;
     }
-
     .timer {
       font-size: 16px;
       color: #d32f2f;
       margin: 10px 0;
     }
-
-    .upi-buttons a {
-      display: inline-block;
-      width: 30%;
-      margin: 5px;
-      text-decoration: none;
-    }
-
     .upi-buttons img {
-      width: 100%;
+      width: 30%;
       height: auto;
       border-radius: 10px;
+      margin: 5px;
     }
-
-    .screenshot {
-      margin-top: 15px;
-      text-align: left;
-    }
-
-    .screenshot a.btn {
-      text-align: center;
-      display: block;
-      text-decoration: none;
+    .screenshot input[type="file"] {
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Marquee -->
+  <!-- Marquee 1: Dynamic Names -->
   <div class="marquee-top">
-    <marquee behavior="scroll" direction="left" scrollamount="5">
-      🎁 Aye buy ticket | Chance to win phone 📱 | Hurry Up!
+    <marquee behavior="scroll" direction="left" scrollamount="5" id="marquee1">
+      🎟️ Ravi bought a ticket! 🎟️ Priya bought a ticket!    🎟️ Raj bought a ticket!  🎟️ Rani bought a ticket!  🎟️ shubham bought a ticket! 🎟️ Aman bought a ticket!
     </marquee>
   </div>
 
-  <!-- Signup Section -->
+  <!-- Marquee 2: Static Message -->
+  <div class="marquee-top">
+    <marquee behavior="scroll" direction="left" scrollamount="5">
+      📢 Buy ticket win smartphone 📱
+    </marquee>
+  </div>
+
   <div class="container" id="signup-section">
     <h2>👤 Signup</h2>
     <input type="text" id="name" placeholder="Your Name" required />
@@ -120,127 +106,160 @@
     <button onclick="submitSignup()">Continue</button>
   </div>
 
-  <!-- Ticket Section -->
   <div class="container" id="ticket-section" style="display: none;">
     <h2>🎉 Lucky Draw</h2>
     <p>Buy ticket for ₹10 using UPI</p>
-
-    <!-- UPI Apps Buttons -->
+    <div>
+      <img src="phonepe_qr.png" alt="PhonePe QR" style="max-width:100%; height:auto; border-radius: 10px;" />
+    </div>
     <div class="upi-buttons">
       <a href="upi://pay?pa=sandipbade@ybl&pn=Sandip%20Bade&am=10&cu=INR">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/PhonePe_Logo.svg/512px-PhonePe_Logo.svg.png" alt="PhonePe">
-      </a>
-      <div style="margin-top: 20px;">
-  <img src="phonepe_qr.png" alt="PhonePe QR" style="max-width:100%; height:auto; border-radius: 10px;" />
-</div>
-      <a href="upi://pay?pa=sandipbade@ybl&pn=Sandip%20Bade&am=10&cu=INR">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Google_Pay_Logo.svg/512px-Google_Pay_Logo.svg.png" alt="Google Pay">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/PhonePe_Logo.svg" alt="PhonePe">
       </a>
       <a href="upi://pay?pa=sandipbade@ybl&pn=Sandip%20Bade&am=10&cu=INR">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Paytm_Logo.jpg/512px-Paytm_Logo.jpg" alt="Paytm">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Google_Pay_Logo.svg" alt="Google Pay">
+      </a>
+      <a href="upi://pay?pa=sandipbade@ybl&pn=Sandip%20Bade&am=10&cu=INR">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Paytm_Logo.jpg" alt="Paytm">
       </a>
     </div>
-
     <button class="btn buy-btn" onclick="confirmPayment()">✅ I Have Paid</button>
-
-    <!-- Screenshot Upload replaced by Google Form link -->
-    <div class="screenshot" id="screenshot-upload" style="disply">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSe5HrrYM7IVJBiae_ds0MbrOBPXI4Cdsps5GzWGM51yDwbvZA/viewform?usp=dialog" 
-         class="btn buy-btn">
-        📤 Upload Payment Screenshot</div>
-<div>
-<input type="file" id="paymentScreenshot" name="paymentScreenshot" accept="image/*" required />
-      </a>
+    <div class="screenshot" id="screenshot-upload" style="display: none;">
+      <input type="file" id="paymentScreenshot" name="paymentScreenshot" accept="image/*" required />
+      <button class="btn buy-btn" id="uploadBtn" onclick="uploadScreenshot()" disabled>
+        📄 Upload Payment Screenshot
+      </button>
     </div>
-
-    <!-- Referral Section -->
     <div id="referral-section" style="display: none;">
       <div class="info">
-        <p><strong>Your Code:</strong> <span id="ref-code">https://sandip200k.github.io/Lucky-Draw-win-phone-/</span></p>
+<p>your ticket activate when your screenshot check admin manually so real screenshot upload </p>
+        <p><strong>Your Code:</strong> <span id="ref-code">USER123</span></p>
+        <p><strong>Your Tickets:</strong> <span id="user-tickets">0</span></p>
+      </div>
+      <div class="info">
+        <p>Free ticket when user successfully buys and uploads screenshot</p>
         <p><strong>Free Tickets:</strong> <span id="free-tickets">0</span></p>
       </div>
       <button class="btn share-btn" onclick="shareCode()">📤 Share Invite Link</button>
     </div>
-
     <div class="timer">
-      ⏳ Next Winner at <strong>9:00 PM</strong>
+      <p>🕐 Next winner when sold tickets</p>
       <p id="countdown"></p>
+      <p>✉️ Tickets Remaining: <span id="tickets-left">5000</span></p>
     </div>
   </div>
-<footer style="text-align:center; margin-top: 30px; font-size: 14px; color: #555;">
-  ⚠️ Code tabhi kaam karega jab payment successfully hua hoga aur admin manually check karega.
-</footer>
+
+  <footer style="text-align:center; margin-top: 30px; font-size: 14px; color: #555;">
+    ⚠️ Ticket will be activated only after admin verifies payment screenshot.
+  </footer>
+
   <script>
-    let hasPaid = false;
+    let ticketsSold = 0;
+    const maxTickets = 5000;
+    let currentUserPhone = "";
+    const allUsers = {}; // { phone: { name: '', tickets: [] } }
 
     function submitSignup() {
       const name = document.getElementById('name').value.trim();
       const phone = document.getElementById('phone').value.trim();
-
-      const phoneRegex = /^[6-9]\d{9}$/; // Valid Indian number
-
+      const phoneRegex = /^[6-9]\d{9}$/;
       if (!name || !phoneRegex.test(phone)) {
-        alert("Enter a valid name and 10-digit Indian mobile number.");
+        alert("Enter a valid name and 10-digit mobile number.");
         return;
       }
-
+      currentUserPhone = phone;
+      if (!allUsers[phone]) {
+        allUsers[phone] = { name: name, tickets: [] };
+      }
       document.getElementById('signup-section').style.display = 'none';
       document.getElementById('ticket-section').style.display = 'block';
+      document.getElementById('ref-code').textContent = phone;
     }
 
     function confirmPayment() {
-      hasPaid = true;
-
-      // Generate random ticket number (1000 to 9999)
-      const ticketNumber = Math.floor(1000 + Math.random() * 9000);
-
-      alert(`✅ Payment received. Your ticket number is: ${ticketNumber}\nPlease upload screenshot and share referral link.`);
-
-      // Show screenshot upload (Google Form link) and referral
-      document.getElementById('screenshot-upload').style.display = 'block';
-      document.getElementById('referral-section').style.display = 'block';
-
-      // Display ticket number on page
-      let ticketDisplay = document.getElementById('ticket-number-display');
-      if (!ticketDisplay) {
-        ticketDisplay = document.createElement('p');
-        ticketDisplay.id = 'ticket-number-display';
-        ticketDisplay.style.fontWeight = 'bold';
-        ticketDisplay.style.marginTop = '10px';
-        document.getElementById('ticket-section').appendChild(ticketDisplay);
-      }
-      ticketDisplay.textContent = `🎫 Your Ticket Number: ${ticketNumber}`;
-
-      // Send WhatsApp to admin with ticket number
-      const msg = `New payment received. Ticket Number: ${ticketNumber}. Please verify and assign ticket.\nReferral Code: SANDIP123`;
-      }
-
-    function shareCode() {
-      if (!hasPaid) {
-        alert("Buy a ticket before sharing.");
+      if (ticketsSold >= maxTickets) {
+        alert("All tickets are sold out!");
         return;
       }
+      document.getElementById('screenshot-upload').style.display = 'block';
+    }
+
+    function uploadScreenshot() {
+      const fileInput = document.getElementById('paymentScreenshot');
+      if (!fileInput.files.length) {
+        alert("Please select a screenshot to upload.");
+        return;
+      }
+      const ticketNum = 1000 + Math.floor(Math.random() * 9000);
+      allUsers[currentUserPhone].tickets.push(ticketNum);
+      ticketsSold++;
+
+      document.getElementById('uploadBtn').disabled = true;
+      document.getElementById('user-tickets').innerText = allUsers[currentUserPhone].tickets.length;
+      document.getElementById('tickets-left').innerText = maxTickets - ticketsSold;
+      alert(`✅ Screenshot uploaded. Ticket assigned: ${ticketNum}`);
+      document.getElementById('referral-section').style.display = 'block';
+
+      if ((maxTickets - ticketsSold) <= 10) {
+        start24HourCountdown();
+      }
+      if (ticketsSold === maxTickets) {
+        declareWinner();
+      }
+    }
+
+    function shareCode() {
       const ref = document.getElementById('ref-code').textContent;
       const shareLink = `${window.location.href}?ref=${ref}`;
       navigator.clipboard.writeText(shareLink);
       alert("Referral link copied to clipboard!");
     }
 
-    function updateCountdown() {
+    function start24HourCountdown() {
       const now = new Date();
-      const drawTime = new Date();
-      drawTime.setHours(21, 0, 0, 0);
-      if (now > drawTime) drawTime.setDate(drawTime.getDate() + 1);
-
-      const diff = drawTime - now;
-      const hours = Math.floor(diff / (1000 * 60 * 60));
-      const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
-      const seconds = Math.floor((diff % (1000 * 60)) / 1000);
-      document.getElementById("countdown").innerText = `${hours}h ${minutes}m ${seconds}s`;
+      const end = new Date(now.getTime() + 24 * 60 * 60 * 1000);
+      const interval = setInterval(() => {
+        const diff = end - new Date();
+        if (diff <= 0) {
+          clearInterval(interval);
+          declareWinner();
+          return;
+        }
+        const h = Math.floor(diff / 3600000);
+        const m = Math.floor((diff % 3600000) / 60000);
+        const s = Math.floor((diff % 60000) / 1000);
+        document.getElementById('countdown').innerText = `${h}h ${m}m ${s}s`;
+      }, 1000);
     }
 
-    setInterval(updateCountdown, 1000);
-    updateCountdown();
+    function declareWinner() {
+      const allTickets = [];
+      for (const phone in allUsers) {
+        allUsers[phone].tickets.forEach(ticket => {
+          allTickets.push({ ticket, phone, name: allUsers[phone].name });
+        });
+      }
+      const winner = allTickets[Math.floor(Math.random() * allTickets.length)];
+      alert(`🎉 All tickets sold!\n\nWinner:\nName: ${winner.name}\nPhone: ${winner.phone}\nTicket: ${winner.ticket}`);
+    }
+
+    document.getElementById('paymentScreenshot').addEventListener('change', function () {
+      document.getElementById('uploadBtn').disabled = !this.files.length;
+    });
+
+    // Dynamic Marquee 1
+    const marquee1 = document.getElementById('marquee1');
+    const names = ['Ravi', 'Priya', 'Aman', 'Sneha', 'Ankit', 'Divya', 'Rohit', 'Kiran', 'Meena', 'Sanjay'];
+    let i = 0;
+    setInterval(() => {
+      const newName = names[i % names.length];
+      const newMsg = `🎟️ ${newName} bought a ticket!`;
+      marquee1.innerHTML += ' ' + newMsg;
+      i++;
+      if (marquee1.innerHTML.split('🎟️').length > 20) {
+        marquee1.innerHTML = marquee1.innerHTML.split('🎟️').slice(-10).join('🎟️');
+      }
+    }, 3000);
   </script>
 
 </body>
